added sound folder

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+
+<div id="sidebar">
+    <p class="sidebar-text">henlo</p>
+</div>
+
+<div id="main">
+    <button id="open-sidebar"> Open Sidebar </button>
+</div>
     
 </body>
 </html>
