flowers showing in the sidebar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
 
 <div id="sidebar">
-    <p class="sidebar-text">henlo</p>
+    <p class="sidebar-text">Select a Flower</p>
+    <ul id="flower-list">
+
+    </ul>
 </div>
 
 <div id="main">
