open close sidebar button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 <div id="main">
     <button id="open-sidebar"> Open Sidebar </button>
+    <div id="flower-main">
+        
+    </div>
 </div>
     
 </body>
