front end mvp minus sounds

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <div id="sidebar">
     <p class="sidebar-text">Select a Flower</p>
     <div id="flower-list">
-
+        <!-- sidebar flower list here -->
     </div>
 </div>
 
 <div id="main">
     <button id="open-sidebar"> Open Sidebar </button>
     <div id="flower-main">
-
+        <!-- selected flower image here -->
+    </div>
+    <div id="bouquet-list">
+        <!-- flowers chosen for bouquet here -->
     </div>
 </div>
     
