--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <div id="modal" style="display: none;" data-action="close">
         <form id="save-bouquet-form">
-            <h1>Save Bouquet</h1>
-            <label for="name">Name</label>
+            <h2>Save Bouquet</h2>
+            <label for="name">Name:</label>
             <input type="text" name="name">
-            <label for="description">Description</label>
-            <textarea name="description" rows="2"></textarea>
-            <input type="submit" value="Create Bake">
+            <label for="description">Description:</label>
+            <input type="text" name="description"><br>
+            <input type="submit" value="Create Bouquet">
         </form>
     </div>
     
