got modal to pop up, fetch to bouquets works

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
     <div id="flower-main">
         <!-- selected flower image here -->
     </div>
-    <div id="bouquet-list">
+    <div id="selected-Flowers">
         <!-- flowers chosen for bouquet here -->
     </div>
 
     <div>
         <button id="create-bouquet"> Save Bouquet </button>
+    </div>
+
+    <div>
+        <button id="show-All-Bouquets-Button">Show Bouquets</button>
     </div>
 </div>
 
@@ -43,5 +47,12 @@
         </form>
     </div>
     
+    <div id="bouqeutModal" style="display: none;" data-action="close">
+        <div id="bouquet-list">
+            <h1> HI </h1>
+            <!-- bouquet list will appear here through modal  -->
+        </div>
+    </div>
+    <!-- This modal will display the bouquets ~^~^~^ -->
 </body>
 </html>
