implenting sound and slider stuffs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="flower-main">
         <!-- selected flower image here -->
     </div>
-    <div id="bouquet-list">
+    <div id="selected-flowers">
         <!-- flowers chosen for bouquet here -->
     </div>
 
