added visgit add .git add .

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <div id="flower-main">
             <!-- selected flower image here -->
         </div>
+        <div id="visualizer">
+            <canvas height="500" width="500" id="vis"></canvas>
+            <!-- visualizer goes here -->
+        </div>
         <div id="bottom-bar">
             <div id="selected-flowers">
                 <!-- flowers chosen for bouquet here -->
@@ -60,5 +64,6 @@
             </ul>
         
 </div>
+<div id="audio-container"></div>
 </body>
 </html>
