added styling and some functionality

--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
             <div id="selected-flowers">
                 <!-- flowers chosen for bouquet here -->
             </div>
-    
-            <div id="bouquet-buttons">
-                <button id="create-bouquet">Save Bouquet</button>
-                <button id="view-all-bouquets">View All Bouquets</button>
-            </div>
         </div>
+        <div id="bouquet-buttons-bar">
+            <div id="bouquet-buttons">
+                <button class="btn bottom-btn" id="create-bouquet">Save Bouquet</button>
+                <button class="btn bottom-btn" id="view-all-bouquets">View All Bouquets</button>
+            </div>
+        </div>  
     </div>
 </div>
     
@@ -51,7 +52,7 @@
             <input type="text" name="description"><br><br>
             <input type="submit" value="Create Bouquet">
         </div>
-        <button id="go-back">Go Back</button> 
+        <button class="btn" id="go-back">Go Back</button> 
     </form>
 </div>  
 
